src/objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>The Account (SITE) to which the Award is given</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <description>Award applicant Email</description>
        <inlineHelpText>Enter award applicant Email address</inlineHelpText>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_First_Name__c</fullName>
        <description>Award applicant&apos;s First Name - originally designed for ISA awards</description>
        <inlineHelpText>Enter award applicant&apos;s first name</inlineHelpText>
        <label>Applicant First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Last_Name__c</fullName>
        <description>Award applicant&apos;s Last Name - originally designed for ISA awards</description>
        <inlineHelpText>Enter award applicant&apos;s last name</inlineHelpText>
        <label>Applicant Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Phone_Number__c</fullName>
        <description>Awards applicant&apos;s phone number.  This is created as a text field and not a phone filed to mirror Moodle cfg and reduce issues when importing data</description>
        <inlineHelpText>Enter award applicant&apos;a phone number</inlineHelpText>
        <label>Applicant Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <description>Requested for ISA awards</description>
        <inlineHelpText>Enter URL for ISA award</inlineHelpText>
        <label>Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <label>Award Type</label>
        <picklist>
            <picklistValues>
                <fullName>ISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Globe of Honour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sword of Honour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_Company_Name__c</fullName>
        <inlineHelpText>The name of the Company to be printed on the Certificate</inlineHelpText>
        <label>Certificate Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_number__c</fullName>
        <description>Certificate number (attempt number on Moodle)</description>
        <inlineHelpText>Enter Certificate Number</inlineHelpText>
        <label>Certificate number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Award Contact</description>
        <inlineHelpText>Award Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Awarded__c</fullName>
        <label>Date Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_result_enquiry_was_responded_to__c</fullName>
        <label>Date result enquiry was responded to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Enter the grade number or value for this award.</description>
        <inlineHelpText>Enter the grade number or value for this award.</inlineHelpText>
        <label>Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if award was created as part of an import process - instated for ISA imports 2014</description>
        <inlineHelpText>Denotes if award was created as part of an import process</inlineHelpText>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Sector__c</fullName>
        <description>Industry as entered on Moodle - this does not emulate account industry field format</description>
        <inlineHelpText>Enter Account&apos;s industry</inlineHelpText>
        <label>Industry Sector</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_examine__c</fullName>
        <label>Name of examine</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Any notes that are needed to be held against the award</description>
        <inlineHelpText>Any notes that are needed to be held against the award</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds a relationship to Opportunity(s)</description>
        <inlineHelpText>Link this award to an opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_result_upheld__c</fullName>
        <label>Original result upheld</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result_Address__c</fullName>
        <description>Address results will be sent to</description>
        <inlineHelpText>Enter address to which results will be sent</inlineHelpText>
        <label>Result Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Result_enquiry_examiner__c</fullName>
        <label>Result enquiry examiner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Result_enquiry_received__c</fullName>
        <label>Result enquiry received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <description>Award account site address</description>
        <inlineHelpText>Enter Account (site address)</inlineHelpText>
        <label>Site Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This is the mark for this award.</description>
        <inlineHelpText>This is the mark for this award.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distinction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - Did not Apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for marking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to examiner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Account_ID__c</fullName>
        <formula>CASESAFEID(Account__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Award_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Award ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Opportunity_ID__c</fullName>
        <description>18 digit opportunity ID</description>
        <formula>CASESAFEID(Opportunity__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns 18 digit opportunity ID</inlineHelpText>
        <label>18 Digit Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Award</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AW-{0000000}</displayFormat>
        <label>Award Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>